# ProbCox

./: .gitignore  LICENSE  README.md  config.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
ProbCox/: probcox.py  simulation.py
_/: TensorCox.py  dataloader.py  exponential.py  heart.ipynb  metrics.py
dev/: colon.ipynb  lung.ipynb  partial_likelihood_scaling.py  simulation.py  test_heart.py
examples/: probcox_larynx.ipynb  probcox_simulation.ipynb  probcox_simulation_HD.ipynb
examples/real/: colon.py  heart.py  lung.py
examples/simulation/: sim0.py  sim1.py  sim10.py  sim2.py  sim3.py  sim4.py  sim5.py  sim6.py  sim7.py  sim8.py  sim9.py  sim_template.R
paper/ProbCox/: README.md  probcox.py
paper/ProbCox/docs/: acc_form.Rmd  acc_form.md  probcox.bib  requirements_R.txt  requirements_python.txt
paper/ProbCox/ukb/: icd10_codes.csv
paper/data/real/: heart.csv  mgus1.csv
paper/paper/figures/: forest_plot.eps  likelihoodapprox.eps  schematic.eps  sim2.eps  sim3.eps
paper/paper/tables/: example.csv  likelihood_approx_additonal2_combined.csv  likelihood_approx_additonal_combined.csv  likelihood_approx_combined.csv  sim1_main.csv  sim1_supp.csv  sim2_main.csv  table_real.csv  table_real.xlsx  table_real_rounded.csv  table_real_rounded.xlsx  table_real_rounded2.csv
paper/scripts/real/: colon.R  colon.py  heart.R  heart.py  lung.R  (+5 more)
scripts/: hierarchical.py  hierarical.py  missing.py  time_dependent_param.py
src/probcox/: __init__.py  probcox.py  simulation.py
tmp/: sim0.R  sim10.R  sim2.R  sim3.R  sim4.R  sim5.R  sim6.R  sim7.R  sim8.R  sim9.R
(+314 files in other folders)
