[metadata]

name = probcox
version = 0.0.3
author = Alexander Wolfgang Jung
author_email = alex.w.jung@googlemail.com
description = Probilistic Cox Regression
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexwjung/ProbCox
project_urls =
    Bug Tracker = https://github.com/alexwjung/ProbCox/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved ::  MIT License
    Operating System :: OS Independent

[options]
install_requires =
    numpy
    torch
    pyro-ppl<1.6

package_dir =
    = src
packages = find:

python_requires = >=3.6

[options.packages.find]
where = src
